--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -8,18 +8,42 @@
 
 version: 2
 updates:
-  # Enable version updates for npm
+
+  # Maintain dependencies for npm
   - package-ecosystem: "npm"
     # Look for `package.json` and `lock` files in the `root` directory
     directory: "/"
     # Check the npm registry for updates every day (weekdays)
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      # Use Tehran Standard Time
+      timezone: "Asia/Tehran"
+      # Labels on pull requests for security and version updates
+      labels:
+        - "npm dependencies"
 
-  # Enable version updates for Docker
+  # Maintain dependencies for Docker
   - package-ecosystem: "docker"
     # Look for a `Dockerfile` in the `root` directory
     directory: "/"
     # Check for updates once a week
     schedule:
       interval: "weekly"
+      # Use Tehran Standard Time
+      timezone: "Asia/Tehran"
+
+  # Maintain dependencies for GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      # Use Tehran Standard Time
+      timezone: "Asia/Tehran"
+
+  # Maintain dependencies for npm
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      # Use Tehran Standard Time
+      timezone: "Asia/Tehran"
