--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
   "jsdrive": "https://cdn.jsdelivr.net/npm/@md-akhi/shdatetime@latest/dist/browser/shdatetime.min.js",
   "exports": {
     ".": {
-      "require": "./dist/cjs/index.js",
-      "import": "./dist/mjs/index.js",
-      "types": "./dist/types/index.d.ts"
+      "require": "./dist/cjs/base.js",
+      "import": "./dist/mjs/base.js",
+      "types": "./dist/types/base.d.ts"
     },
     "./words?": {
       "require": "./dist/cjs/word.js",
@@ -59,7 +59,7 @@
       "import": "./dist/mjs/l10n/*.js",
       "types": "./dist/types/l10n/*.d.ts"
     },
-    "./*": {
+    "./i18n/*": {
       "require": "./dist/cjs/i18n/*.js",
       "import": "./dist/mjs/i18n/*.js",
       "types": "./dist/types/i18n/*.d.ts"
@@ -67,18 +67,10 @@
   },
   "typesVersions": {
     "*": {
-      ".": [
-        "dist/types/index.d.ts"
-      ],
-      "./words?": [
-        "./dist/types/word.d.ts"
-      ],
-      "./tools?": [
-        "./dist/types/tools.d.ts"
-      ],
-      "./*": [
-        "./dist/types/i18n/*.d.ts"
-      ]
+      ".": ["dist/types/base.d.ts"],
+      "./words?": ["./dist/types/word.d.ts"],
+      "./tools?": ["./dist/types/tools.d.ts"],
+      "./*": ["./dist/types/i18n/*.d.ts"]
     }
   },
   "directories": {
@@ -87,16 +79,8 @@
     "tests": "./tests",
     "docs": "./docs"
   },
-  "files": [
-    "LICENSE",
-    "README.md",
-    "CHANGELOG.md",
-    "docs",
-    "dist"
-  ],
-  "man": [
-    "./docs/**/*.md"
-  ],
+  "files": ["LICENSE", "README.md", "CHANGELOG.md", "docs", "dist"],
+  "man": ["./docs/**/*.md"],
   "repository": {
     "type": "git",
     "url": "https://github.com/md-akhi/SHDateTime-js.git"
@@ -110,13 +94,18 @@
     "@babel/preset-env": "^7.22.15",
     "@tsconfig/recommended": "^1.0.2",
     "@types/chai": "^4.3.6",
+    "@types/gulp": "^4.0.13",
+    "@types/gulp-babel": "^6.1.30",
+    "@types/gulp-header": "^2.0.2",
+    "@types/gulp-rename": "^2.0.2",
+    "@types/gulp-uglify": "^3.0.8",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.6.1",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "chai": "^4.3.8",
     "cross-env": "^7.0.3",
-    "del": "^7.1.0",
+    "del": "^6.1.1",
     "eslint": "^8.49.0",
     "eslint-config-recommended": "^4.1.0",
     "gulp": "^4.0.2",
@@ -130,7 +119,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^12.5.0",
     "mocha": "^10.2.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "tslib": "^2.6.2",
@@ -142,14 +131,7 @@
     }
   },
   "lint-staged": {
-    "/**/*.{ts}": [
-      "prettier --write",
-      "eslint --fix",
-      "git add"
-    ],
-    "*": [
-      "prettier --write",
-      "git add"
-    ]
+    "/**/*.{ts}": ["prettier --write", "eslint --fix", "git add"],
+    "*": ["prettier --write", "git add"]
   }
 }
