--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs",
+    "moduleResolution": "Node",
+    "module": "CommonJS",
     "outDir": "dist/cjs",
     "target": "ES6",
     "sourceMap": true,
