fix(gulp): اصلاح تنظیمات
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/tsconfig.browser.json
+++ b/tsconfig.browser.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "Node10",
     "module": "UMD",
     "outDir": "dist/browser",
     "target": "ES6",
