--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ name: Tests
 
 on:
   push:
-    branches: [dev]
+    branches: [dev, ftr/*]
   pull_request:
     branches: [dev]
 
@@ -23,5 +23,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: |
           npm install
-          npm run build --if-present
           npm test
+      # npm run build --if-present
