fix(tsconfig): حذف types node, gulp fix run test action
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,7 @@
     "skipLibCheck": true,
     "traceResolution": false,
     "lib": ["ESNext"],
-    "types": ["Node", "Gulp"],
+    //"types": ["Node", "Gulp"],
     "typeRoots": ["node_modules/@types"]
   },
   "compileOnSave": false,
