chore: test fix test action

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,7 @@
     "skipLibCheck": true,
     "traceResolution": false,
     "lib": ["ESNext"],
-    //"types": ["Node", "Gulp"],
+    "types": ["node", "gulp"],
     "typeRoots": ["node_modules/@types"]
   },
   "compileOnSave": false,
