--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@md-akhi/shdatetime",
+  "name": "shdate",
   "version": "1.4.15",
   "description": "Date and Time Related Extensions SH{Shamsi Hijri, Solar Hijri, Iranian Hijri}",
   "keywords": [
@@ -13,11 +13,15 @@
     "iranian hijri",
     "typescript",
     "Extensions",
-    "parser"
+    "parser",
+    "shdate",
+    "sdate",
+    "jdate",
+    "shdatetime"
   ],
   "author": "Mohammad Amanalikhani <md.akhi.ir@gmail.com> (http://md.akhi.ir)",
-  "license": "AGPL-3.0 License",
-  "suportDate": "(C) 2015 - 2023. All right reserved.",
+  "license": "AGPL-3.0",
+  "copyright": "(C) 2015 - 2023 Open Source Matters,Inc. All right reserved.",
   "scripts": {
     "start": "npm run dev",
     "dev": "nodemon --exec run-s dev:clean tsc:test dev:watch --watch ./src",
@@ -25,7 +29,7 @@
     "dev:watch": "node dist/tests/dev.js",
     "watch": "tsc -w",
     "build": "run-s build:*",
-    "build:version": "gulp setVersion",
+    "build:version": "gulp setDescription",
     "build:clean": "rm -rf dist src/browser",
     "build:tsc": "run-p tsc:cjs tsc:mjs tsc:browser && gulp",
     "test": "npm run tsc:test && mocha",
