--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,10 +21,10 @@ description: > # this means to ignore newlines until "baseurl:"
   Date and Time Related Extensions - SH (Solar Hijri, Shamsi Hijri, Iranian Hijri)
 
 # DO NOT CHANGE THE LINE OF THIS FILE without editing .circleci/circle_urls.sh
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "/SHDateTime-js" # the subpath of your site, e.g. /blog
 
 # This is mostly for testing
-url: "https://md-akhi.github.io/SHDateTime-js" # the base hostname & protocol for your site
+url: "https://md-akhi.github.io" # the base hostname & protocol for your site
 
 # Social (First three Required)
 repo: "https://github.com/md-akhi/SHDateTime-js"
