docs(dev): develop
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -79,6 +79,16 @@ defaults:
     values:
       layout: page
   - scope:
+      path: "en"
+      type: "en"
+    values:
+      layout: page
+  - scope:
+      path: "fa"
+      type: "fa"
+    values:
+      layout: page
+  - scope:
       path: ""
       type: "pages"
     values:
