docs(dev): develop
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -1,106 +1,106 @@
 - title: "Getting Started"
-  url: "en/index.md"
+  url: "./"
 - title: "Static Methods"
-  url: "en#Static-Methods"
+  url: "#Static-Methods"
   children:
     - title: now
-      url: en/now.md
+      url: ./now
     - title: parse
-      url: en/parse.md
+      url: ./parse
 - title: "Instance Methods"
-  url: "en#Instance-Methods"
+  url: "#Instance-Methods"
   children:
     - title: \@@toPrimitive
-      url: en/@@toPrimitive.md
+      url: ./@@toPrimitive
     - title: constructor
-      url: en/constructor.md
+      url: ./constructor
     - title: getDate
-      url: en/getDate.md
+      url: ./getDate
     - title: getDay
-      url: en/getDay.md
+      url: ./getDay
     - title: getFullYear
-      url: en/getFullYear.md
+      url: ./getFullYear
     - title: getHours
-      url: en/getHours.md
+      url: ./getHours
     - title: getMilliseconds
-      url: en/getMilliseconds.md
+      url: ./getMilliseconds
     - title: getMinutes
-      url: en/getMinutes.md
+      url: ./getMinutes
     - title: getMonth
-      url: en/getMonth.md
+      url: ./getMonth
     - title: getSeconds
-      url: en/getSeconds.md
+      url: ./getSeconds
     - title: getTime
-      url: en/getTime.md
+      url: ./getTime
     - title: getTimeZoneOffset
-      url: en/getTimeZoneOffset.md
+      url: ./getTimeZoneOffset
     - title: getUTCDate
-      url: en/getUTCDate.md
+      url: ./getUTCDate
     - title: getUTCDay
-      url: en/getUTCDay.md
+      url: ./getUTCDay
     - title: getUTCFullYear
-      url: en/getUTCFullYear.md
+      url: ./getUTCFullYear
     - title: getUTCHours
-      url: en/getUTCHours.md
+      url: ./getUTCHours
     - title: getUTCMilliseconds
-      url: en/getUTCMilliseconds.md
+      url: ./getUTCMilliseconds
     - title: getUTCMinutes
-      url: en/getUTCMinutes.md
+      url: ./getUTCMinutes
     - title: getUTCMonth
-      url: en/getUTCMonth.md
+      url: ./getUTCMonth
     - title: getUTCSeconds
-      url: en/getUTCSeconds.md
+      url: ./getUTCSeconds
     - title: isLeapYear
-      url: en/isLeapYear.md
+      url: ./isLeapYear
     - title: setDate
-      url: en/setDate.md
+      url: ./setDate
     - title: setFullYear
-      url: en/setFullYear.md
+      url: ./setFullYear
     - title: setHours
-      url: en/setHours.md
+      url: ./setHours
     - title: setMilliseconds
-      url: en/setMilliseconds.md
+      url: ./setMilliseconds
     - title: setMinutes
-      url: en/setMinutes.md
+      url: ./setMinutes
     - title: setMonth
-      url: en/setMonth.md
+      url: ./setMonth
     - title: setSeconds
-      url: en/setSeconds.md
+      url: ./setSeconds
     - title: setTime
-      url: en/setTime.md
+      url: ./setTime
     - title: setUTCDate
-      url: en/setUTCDate.md
+      url: ./setUTCDate
     - title: setUTCFullYear
-      url: en/setUTCFullYear.md
+      url: ./setUTCFullYear
     - title: setUTCHours
-      url: en/setUTCHours.md
+      url: ./setUTCHours
     - title: setUTCMilliseconds
-      url: en/setUTCMilliseconds.md
+      url: ./setUTCMilliseconds
     - title: setUTCMinutes
-      url: en/setUTCMinutes.md
+      url: ./setUTCMinutes
     - title: setUTCMonth
-      url: en/setUTCMonth.md
+      url: ./setUTCMonth
     - title: setUTCSeconds
-      url: en/setUTCSeconds.md
+      url: ./setUTCSeconds
     - title: toDateString
-      url: en/toDateString.md
+      url: ./toDateString
     - title: toIsoString
-      url: en/toIsoString.md
+      url: ./toIsoString
     - title: toJson
-      url: en/toJson.md
+      url: ./toJson
     - title: toLocaleDateString
-      url: en/toLocaleDateString.md
+      url: ./toLocaleDateString
     - title: toLocaleString
-      url: en/toLocaleString.md
+      url: ./toLocaleString
     - title: toLocaleTimeString
-      url: en/toLocaleTimeString.md
+      url: ./toLocaleTimeString
     - title: toString
-      url: en/toString.md
+      url: ./toString
     - title: toTimeString
-      url: en/toTimeString.md
+      url: ./toTimeString
     - title: toUTCString
-      url: en/toUTCString.md
+      url: ./toUTCString
     - title: utc
-      url: en/utc.md
+      url: ./utc
     - title: valueOf
-      url: en/valueOf.md
+      url: ./valueOf
