docs(dev): develop
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -1,5 +1,5 @@
 - title: "Getting Started"
-  url: "../"
+  url: "../index"
 - title: "Static Methods"
   url: "#Static-Methods"
   children:
@@ -10,7 +10,7 @@
 - title: "Instance Methods"
   url: "#Instance-Methods"
   children:
-    - title: @@toPrimitive
+    - title: toPrimitive
       url: ../@@toPrimitive
     - title: constructor
       url: ../constructor
