--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,10 +21,10 @@ description: > # this means to ignore newlines until "baseurl:"
   Date and Time Related Extensions - SH (Solar Hijri, Shamsi Hijri, Iranian Hijri)
 
 # DO NOT CHANGE THE LINE OF THIS FILE without editing .circleci/circle_urls.sh
-baseurl: "/SHDateTime-js" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 
 # This is mostly for testing
-url: "https://md-akhi.github.io" # the base hostname & protocol for your site
+url: "https://md-akhi.github.io/SHDateTime-js" # the base hostname & protocol for your site
 
 # Social (First three Required)
 repo: "https://github.com/md-akhi/SHDateTime-js"
@@ -62,14 +62,14 @@ accentColor: red # purple, green, etc.
 themeColor: red # purple, green, blue, orange, purple, grey
 fixedNav: "true" # true or false
 
-permalink: /:year/:title/
+# permalink: /:lang/:title/
 exclude: [_site, CHANGELOG.md, LICENSE, README.md, vendor]
 
 # Collections
-collections:
-  docs:
-    output: true
-    permalink: /:collection/:path
+# collections:
+#   docs:
+#     output: true
+#     permalink: /:collection/:path
 
 # Defaults
 defaults:
@@ -79,12 +79,12 @@ defaults:
     values:
       layout: page
   - scope:
-      path: ""
+      path: "_pages"
       type: "pages"
     values:
       layout: "page"
   - scope:
-      path: "posts"
+      path: "_posts"
       type: "posts"
     values:
       layout: "post"
