--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "SHDateTime-js/" # the subpath of your site, e.g. /blog
 
 # This is mostly for testing
-url: "https://md-akhi.github.io/SHDateTime-js" # the base hostname & protocol for your site
+url: "https://md-akhi.github.io" # the base hostname & protocol for your site
 
 # Social (First three Required)
 repo: "https://github.com/md-akhi/SHDateTime-js"
