docs(dev): develop
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -1,106 +1,106 @@
 - title: "Getting Started"
-  url: "/index"
+  url: "index"
 - title: "Static Methods"
   url: "#Static-Methods"
   children:
     - title: now
-      url: /now
+      url: now
     - title: parse
-      url: /parse
+      url: parse
 - title: "Instance Methods"
   url: "#Instance-Methods"
   children:
     - title: toPrimitive
-      url: /@@toPrimitive
+      url: toPrimitive
     - title: constructor
-      url: /constructor
+      url: constructor
     - title: getDate
-      url: /getDate
+      url: getDate
     - title: getDay
-      url: /getDay
+      url: getDay
     - title: getFullYear
-      url: /getFullYear
+      url: getFullYear
     - title: getHours
-      url: /getHours
+      url: getHours
     - title: getMilliseconds
-      url: /getMilliseconds
+      url: getMilliseconds
     - title: getMinutes
-      url: /getMinutes
+      url: getMinutes
     - title: getMonth
-      url: /getMonth
+      url: getMonth
     - title: getSeconds
-      url: /getSeconds
+      url: getSeconds
     - title: getTime
-      url: /getTime
+      url: getTime
     - title: getTimeZoneOffset
-      url: /getTimeZoneOffset
+      url: getTimeZoneOffset
     - title: getUTCDate
-      url: /getUTCDate
+      url: getUTCDate
     - title: getUTCDay
-      url: /getUTCDay
+      url: getUTCDay
     - title: getUTCFullYear
-      url: /getUTCFullYear
+      url: getUTCFullYear
     - title: getUTCHours
-      url: /getUTCHours
+      url: getUTCHours
     - title: getUTCMilliseconds
-      url: /getUTCMilliseconds
+      url: getUTCMilliseconds
     - title: getUTCMinutes
-      url: /getUTCMinutes
+      url: getUTCMinutes
     - title: getUTCMonth
-      url: /getUTCMonth
+      url: getUTCMonth
     - title: getUTCSeconds
-      url: /getUTCSeconds
+      url: getUTCSeconds
     - title: isLeapYear
-      url: /isLeapYear
+      url: isLeapYear
     - title: setDate
-      url: /setDate
+      url: setDate
     - title: setFullYear
-      url: /setFullYear
+      url: setFullYear
     - title: setHours
-      url: /setHours
+      url: setHours
     - title: setMilliseconds
-      url: /setMilliseconds
+      url: setMilliseconds
     - title: setMinutes
-      url: /setMinutes
+      url: setMinutes
     - title: setMonth
-      url: /setMonth
+      url: setMonth
     - title: setSeconds
-      url: /setSeconds
+      url: setSeconds
     - title: setTime
-      url: /setTime
+      url: setTime
     - title: setUTCDate
-      url: /setUTCDate
+      url: setUTCDate
     - title: setUTCFullYear
-      url: /setUTCFullYear
+      url: setUTCFullYear
     - title: setUTCHours
-      url: /setUTCHours
+      url: setUTCHours
     - title: setUTCMilliseconds
-      url: /setUTCMilliseconds
+      url: setUTCMilliseconds
     - title: setUTCMinutes
-      url: /setUTCMinutes
+      url: setUTCMinutes
     - title: setUTCMonth
-      url: /setUTCMonth
+      url: setUTCMonth
     - title: setUTCSeconds
-      url: /setUTCSeconds
+      url: setUTCSeconds
     - title: toDateString
-      url: /toDateString
+      url: toDateString
     - title: toIsoString
-      url: /toIsoString
+      url: toIsoString
     - title: toJson
-      url: /toJson
+      url: toJson
     - title: toLocaleDateString
-      url: /toLocaleDateString
+      url: toLocaleDateString
     - title: toLocaleString
-      url: /toLocaleString
+      url: toLocaleString
     - title: toLocaleTimeString
-      url: /toLocaleTimeString
+      url: toLocaleTimeString
     - title: toString
-      url: /toString
+      url: toString
     - title: toTimeString
-      url: /toTimeString
+      url: toTimeString
     - title: toUTCString
-      url: /toUTCString
+      url: toUTCString
     - title: utc
-      url: /utc
+      url: utc
     - title: valueOf
-      url: /valueOf
+      url: valueOf
