docs(dev): develop
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -10,8 +10,8 @@
 - title: "Instance Methods"
   url: "#Instance-Methods"
   children:
-    - title: toPrimitive
-      url: toPrimitive
+    - title: "@@toPrimitive"
+      url: "@@toPrimitive"
     - title: constructor
       url: constructor
     - title: getDate
