--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -44,6 +44,12 @@ color: "#8c1515" # primary color for header, buttons
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: Kramdown
+  syntax_highlighter: coderay
+  syntax_highlighter_opts:
+    line_numbers: table
+    bold_every: 5
 
 # If you add tags to pages, you can link them to some external search
 # If you want to disable this, comment the URL.
