--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -44,8 +44,8 @@ color: "#8c1515" # primary color for header, buttons
 
 # Build settings
 markdown: kramdown
-kramdown:
-  input: Kramdown
+# kramdown:
+#   input: Kramdown
 
 # If you add tags to pages, you can link them to some external search
 # If you want to disable this, comment the URL.
