--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [dev]
+    branches: [dev, rls/*, main]
   pull_request:
-    branches: [dev]
+    branches: [dev, rls/*, main]
 
 jobs:
   build:
@@ -12,15 +12,19 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version:
+          [16.x, 18.x, 20.x]
+          # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    name: Node ${{ matrix.node }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache: "npm"
+          cache-dependency-path: package-lock.json
       - run: |
           npm install
           npm test
