test(dev): develop
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
   "name": "shdate",
-  "version": "2.0.20",
+  "version": "2.1.05",
   "description": "Date and Time Related Extensions SH{Shamsi Hijri, Solar Hijri, Iranian Hijri}",
   "keywords": [
     "date",
     "time",
-    "datetime",
     "date time",
     "date and time",
-    "shamsi hijri",
-    "solar hijri",
-    "iranian hijri",
-    "typescript",
-    "Extensions",
-    "parser",
+    "datetime",
+    "shdatetime",
+    "sdatetime",
     "shdate",
     "sdate",
     "jdate",
-    "shdatetime"
+    "shamsi hijri",
+    "Shamsi Hijri",
+    "Solar Hijri",
+    "solar hijri",
+    "iranian hijri",
+    "Iranian Hijri",
+    "parser",
+    "typescript",
+    "ts",
+    "javascript",
+    "js",
+    "commonjs",
+    "CommonJS",
+    "cjs",
+    "ES",
+    "ESM",
+    "ES Modules",
+    "mjs"
   ],
   "author": "Mohammad Amanalikhani <md.akhi.ir@gmail.com> (http://md.akhi.ir)",
   "license": "AGPL-3.0",
