--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,13 +14,12 @@ jobs:
   build-test: #TEST Packages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: "18.x"
       - run: |
           npm install
-          npm run build --if-present
           npm test
 
   publish-npm: #NPM Packages
@@ -30,8 +29,8 @@ jobs:
       packages: write
       contents: read
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: "18.x"
       # Setup .npmrc file to publish to NPM Packages
@@ -44,6 +43,8 @@ jobs:
           npm install
           npm run build
           npm publish --access public
+        env:
+          NPM_TOKEN: $NPM_TOKEN
 
       # WithOut Scop
       - name: Set package registry without -scope
@@ -60,8 +61,8 @@ jobs:
       packages: write
       contents: read
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: "18.x"
       # Setup .npmrc file to publish to GitHub Packages
@@ -74,6 +75,8 @@ jobs:
           npm install
           npm run build
           npm publish
+        env:
+          GITHUB_TOKEN: $GITHUB_TOKEN
 
       # WithOut Scop
       - name: Set package registry without -scope
