fix(ci): اصلاح ci
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,6 +21,7 @@ jobs:
       - run: |
           npm install
           npm test
+          git mv docs doc
 
   publish-npm: #NPM Packages
     needs: build-test
